--- a/workflow/config/base.yaml
+++ b/workflow/config/base.yaml
@@ -191,7 +191,10 @@ config_base:
     export FHMIN={doc.output_settings.FHMIN_GDAS}
     export FHMAX={doc.output_settings.FHMAX_GDAS}
     export FHOUT={doc.output_settings.FHOUT_GDAS}
-        
+    
+    # GFS cycle info
+    export gfs_cyc={doc.settings.gfs_cyc} # 0: no GFS cycle, 1: 00Z only, 2: 00Z and 12Z only, 4: all 4 cycles.
+    
     # GFS output and frequency
     export FHMIN_GFS={doc.output_settings.FHMIN_GFS}
     export FHMAX_GFS={doc.output_settings.FHMAX_GFS}
@@ -199,7 +202,6 @@ config_base:
     export FHMAX_HF_GFS={doc.output_settings.FHMAX_HF_GFS}
     export FHOUT_HF_GFS={doc.output_settings.FHOUT_HF_GFS}
     export FHRLST="{doc.output_settings.gfs_forecast_hours}"
-    export STEP_GFS="{tools.dt_to_HMS(doc.settings.STEP_GFS).split(':')[0]}"
 
     # I/O QUILTING, true--use Write Component; false--use GFDL FMS
     # if quilting=true, choose OUTPUT_GRID as cubed_sphere_grid in netcdf or gaussian_grid
