--- a/workflow/defaults/settings.yaml
+++ b/workflow/defaults/settings.yaml
@@ -35,6 +35,7 @@ default_settings: &default_settings
   ecflow_virtual_clock: no
   ecflow_hybrid_clock: no
 
+  gfs_cyc: 4
   nems_temp: 'atm'
   nems_temp_cold: 'atm'
   ics_from: opsgfs
@@ -76,9 +77,6 @@ default_settings: &default_settings
   DOIAU: NO
   IAUFHRS: 6
   IAU_DELTHRS: 6
-
-  STEP_DA: !timedelta "06:00:00"
-  STEP_GFS: !timedelta "06:00:00"
 
   KEEPDATA: NO
   DUMP_SUFFIX: ""
