--- a/workflow/cases/dev/fv3q2fy19retro5-GFS@C768_ff_fixed.yaml
+++ b/workflow/cases/dev/fv3q2fy19retro5-GFS@C768_ff_fixed.yaml
@@ -95,6 +95,5 @@ case:
     EDATE: 2016-02-14t12:00:00
     chgres_and_convert_ics: No
     realtime: false
-    STEP_GFS: !timedelta "06:00:00"
-    STEP_DA: !timedelta "00:00:00"
+    gfs_cyc: 4 # run gfs at 0z, 12z
     run_gsi: No
