--- a/workflow/cases/manual_mode.yaml
+++ b/workflow/cases/manual_mode.yaml
@@ -92,7 +92,7 @@ case:
     DUMP_SUFFIX: "p"
     run_gsi: Yes
     chgres_and_convert_ics: No
-    STEP_GFS: !timedelta "06:00:00"
+    gfs_cyc: 4 # run gfs every cycle
 
   downstream: &downstream
     DO_POST_PROCESSING: NO
