--- a/workflow/cases/public_release_v1/Harvey_2017081712_GFS@C384-override-stuff-in-case-file.yaml
+++ b/workflow/cases/public_release_v1/Harvey_2017081712_GFS@C384-override-stuff-in-case-file.yaml
@@ -19,7 +19,7 @@ case:
     IC_CDUMP: gfs
     run_gsi: No
     chgres_and_convert_ics: No
-    STEP_GFS: !timedelta "06:00:00"
+    gfs_cyc: 4 # run gfs every cycle
 
   suite_overrides: !FirstTrue
     - when: !calc (doc.platform.name=="JET")
