--- a/workflow/config/wave.yaml
+++ b/workflow/config/wave.yaml
@@ -78,8 +78,12 @@ config_wave:
         WAVNCYC=4
         WAVHCYC=6
         FHMAX_WAV_CUR=48 # RTOFS forecasts only out to 8 days
+      elif [ $gfs_cyc -ne 0 ]
+      then
+        FHMAX_WAV_CUR=192 # RTOFS forecasts only out to 8 days
+        WAVHCYC=`expr 24 / $gfs_cyc`
       else
-        WAVHCYC={tools.dt_to_HMS(doc.settings.STEP_GFS).split(':')[0]}
+        WAVHCYC=0
         FHMAX_WAV_CUR=192 # RTOFS forecasts only out to 8 days
       fi
       export FHMAX_WAV_CUR WAVHCYC WAVNCYC
