Update templates to set ocean mesh file
The latest version of UFS adds a setting to define the ocean mesh file,
so the nems.configure templates are updated to define them. They are
identical to the ice mesh file, so the MESHICE variable is renamed to
MESH_OCN_ICE and used for both. Additionally, the use_mommesh variable
is added and defaults to true.

Refs: #324

--- a/ush/nems.configure.medcold_atm_ocn_ice.IN
+++ b/ush/nems.configure.medcold_atm_ocn_ice.IN
@@ -32,6 +32,7 @@ OCN_attributes::
   ProfileMemory = false
   OverwriteSlice = true
   dbug_flag = 0  
+  mesh_ocn = @[MESH_OCN_ICE]
 ::
 
 # ICE #
@@ -42,7 +43,7 @@ ICE_attributes::
   DumpFields = @[DumpFields]
   ProfileMemory = false
   OverwriteSlice = true
-  mesh_ice = @[MESHICE]
+  mesh_ice = @[MESH_OCN_ICE]
   stop_n = @[FHMAX]
   stop_option = nhours
   stop_ymd = -999
