--- a/ush/nems.configure.medcold_atm_ocn_ice_wav.IN
+++ b/ush/nems.configure.medcold_atm_ocn_ice_wav.IN
@@ -31,6 +31,7 @@ OCN_attributes::
   DumpFields = @[DumpFields]
   ProfileMemory = false
   OverwriteSlice = true
+  mesh_ocn = @[MESH_OCN_ICE]
 ::
 
 # ICE #
@@ -41,7 +42,7 @@ ICE_attributes::
   DumpFields = @[DumpFields]
   ProfileMemory = false
   OverwriteSlice = true
-  mesh_ice = @[MESHICE]
+  mesh_ice = @[MESH_OCN_ICE]
   stop_n = @[FHMAX]
   stop_option = nhours
   stop_ymd = -999
