--- a/sorc/cpl_build.cfg
+++ b/sorc/cpl_build.cfg
@@ -2,7 +2,6 @@
 # ***** configuration of coupled workflow build *****
 
  Building fv3gfs (fv3gfs) .............................. yes
- Building reg2grb2 (reg2grb2) .......................... yes
  Building ww3_prepost (ww3_prepost) .................... yes
  Building gsi (gsi) .................................... no
  Building gldas (gldas) ................................ no
@@ -10,7 +9,7 @@
  Building ufs_utils (ufs_utils) ........................ no
  Building gldas (gldas) ................................ no
  Building gfs_wafs (gfs_wafs) .......................... no
- Building workflow_utils (workflow_utils)............... no
+ Building workflow_utils (workflow_utils)............... yes
  Building gfs_util (gfs_util) .......................... no
 
  
