Update nems.configure to inclue eps_imesh
Adds the eps_imesh setting to the nems.configure files when CICE is
on.

Refs: #324, #333

--- a/ush/nems.configure.medcold_atm_ocn_ice.IN
+++ b/ush/nems.configure.medcold_atm_ocn_ice.IN
@@ -100,4 +100,5 @@ ALLCOMP_attributes::
       restart_option = nhours
       restart_ymd = -999
       dbug_flag = 0
+      eps_imesh = @[eps_imesh]
 ::
