--- a/ush/nems.configure.medcold_atm_ocn_ice_wav.IN
+++ b/ush/nems.configure.medcold_atm_ocn_ice_wav.IN
@@ -113,4 +113,5 @@ ALLCOMP_attributes::
       restart_option = nhours
       restart_ymd = -999
       dbug_flag = 0
+      eps_imesh = @[eps_imesh]
 ::
