Greatly enhance .gitignore to ignore checked out and built pieces
Refs: #363

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,189 @@
 # Ignore all compiled files
+#--------------------------
+__pycache__
 *.pyc
-*.o
+*.[aox]
 *.mod
 
-# Ignore exec folder
+# Ignore folders
+#-------------------
 exec/
+build*/
+install*/
 
-# Ignore sorc folders from externals
-sorc/logs/
-sorc/fv3gfs.fd/
-sorc/gfs_post.fd/
-sorc/gsi.fd/
-sorc/ufs_utils.fd/
-sorc/gfs_wafs.fd/
-sorc/verif-global.fd/
+# Ignore fix directory symlinks
+#------------------------------
+fix/0readme
+fix/fix_*
+fix/gdas/
+fix/wafs
+
+# Ignore parm file symlinks
+#--------------------------
+parm/config/config.base
+parm/gldas
+parm/mon
+parm/post
+parm/wafs
+
+# Ignore sorc and logs folders from externals
+#--------------------------------------------
+sorc/*log
+sorc/logs
+sorc/fv3gfs.fd
+sorc/gfs_post.fd
+sorc/gfs_wafs.fd
+sorc/gsi.fd
+sorc/ufs_utils.fd
+sorc/verif-global.fd
+
+# Ignore sorc symlinks
+#---------------------
+sorc/calc_analysis.fd
+sorc/calc_increment_ens.fd
+sorc/calc_increment_ens_ncio.fd
+sorc/emcsfc_ice_blend.fd
+sorc/emcsfc_snow2mdl.fd
+sorc/filter_topo.fd
+sorc/fregrid.fd
+sorc/gdas2gldas.fd
+sorc/getsfcensmeanp.fd
+sorc/getsigensmeanp_smooth.fd
+sorc/getsigensstatp.fd
+sorc/gfs_ncep_post.fd
+sorc/gldas.fd
+sorc/gldas2gdas.fd
+sorc/gldas_forcing.fd
+sorc/gldas_model.fd
+sorc/gldas_post.fd
+sorc/gldas_rst.fd
+sorc/global_chgres.fd
+sorc/global_cycle.fd
+sorc/global_enkf.fd
+sorc/global_gsi.fd
+sorc/interp_inc.fd
+sorc/make_hgrid.fd
+sorc/make_solo_mosaic.fd
+sorc/mkgfsnemsioctl.fd
+sorc/ncdiag_cat.fd
+sorc/nemsio_chgdate.fd
+sorc/nemsio_get.fd
+sorc/nemsio_read.fd
+sorc/nst_tf_chg.fd
+sorc/orog.fd
+sorc/oznmon_horiz.fd
+sorc/oznmon_time.fd
+sorc/radmon_angle.fd
+sorc/radmon_bcoef.fd
+sorc/radmon_bcor.fd
+sorc/radmon_time.fd
+sorc/recentersigp.fd
+sorc/shave.fd
+sorc/wafs_awc_wafavn.fd
+sorc/wafs_blending.fd
+sorc/wafs_cnvgrib2.fd
+sorc/wafs_gcip.fd
+sorc/wafs_makewafs.fd
+sorc/wafs_setmissing.fd
+
+# Ignore scripts from externals
+#------------------------------
+# jobs symlinks
+jobs/JGDAS_ATMOS_ANALYSIS_DIAG
+jobs/JGDAS_ATMOS_CHGRES_FORENKF
+jobs/JGDAS_ATMOS_GLDAS
+jobs/JGDAS_ATMOS_VERFOZN
+jobs/JGDAS_ATMOS_VERFRAD
+jobs/JGDAS_ATMOS_VMINMON
+jobs/JGDAS_ENKF_DIAG
+jobs/JGDAS_ENKF_ECEN
+jobs/JGDAS_ENKF_FCST
+jobs/JGDAS_ENKF_POST
+jobs/JGDAS_ENKF_SELECT_OBS
+jobs/JGDAS_ENKF_SFC
+jobs/JGDAS_ENKF_UPDATE
+jobs/JGFS_ATMOS_VMINMON
+jobs/JGFS_ATMOS_WAFS
+jobs/JGFS_ATMOS_WAFS_BLENDING
+jobs/JGFS_ATMOS_WAFS_BLENDING_0P25
+jobs/JGFS_ATMOS_WAFS_GCIP
+jobs/JGFS_ATMOS_WAFS_GRIB2
+jobs/JGFS_ATMOS_WAFS_GRIB2_0P25
+jobs/JGLOBAL_ATMOS_ANALYSIS
+jobs/JGLOBAL_ATMOS_ANALYSIS_CALC
+jobs/JGLOBAL_ATMOS_NCEPPOST
+jobs/JGLOBAL_ATMOS_POST_MANAGER
+# scripts symlinks
+scripts/exemcsfc_global_sfc_prep.sh
+scripts/exgdas_atmos_chgres_forenkf.sh
+scripts/exgdas_atmos_gldas.sh
+scripts/exgdas_atmos_nceppost.sh
+scripts/exgdas_atmos_verfozn.sh
+scripts/exgdas_atmos_verfrad.sh
+scripts/exgdas_atmos_vminmon.sh
+scripts/exgdas_enkf_ecen.sh
+scripts/exgdas_enkf_fcst.sh
+scripts/exgdas_enkf_post.sh
+scripts/exgdas_enkf_select_obs.sh
+scripts/exgdas_enkf_sfc.sh
+scripts/exgdas_enkf_update.sh
+scripts/exgfs_atmos_nceppost.sh
+scripts/exgfs_atmos_vminmon.sh
+scripts/exgfs_atmos_wafs_blending.sh
+scripts/exgfs_atmos_wafs_blending_0p25.sh
+scripts/exgfs_atmos_wafs_gcip.sh
+scripts/exgfs_atmos_wafs_grib.sh
+scripts/exgfs_atmos_wafs_grib2.sh
+scripts/exgfs_atmos_wafs_grib2_0p25.sh
+scripts/exglobal_atmos_analysis.sh
+scripts/exglobal_atmos_analysis_calc.sh
+scripts/exglobal_atmos_pmgr.sh
+scripts/exglobal_diag.sh
+# ush symlinks
+ush/calcanl_gfs.py
+ush/calcinc_gfs.py
+ush/emcsfc_ice_blend.sh
+ush/emcsfc_snow.sh
+ush/fix_precip.sh
+ush/fv3gfs_chgres.sh
+ush/fv3gfs_downstream_nems.sh
+ush/fv3gfs_driver_grid.sh
+ush/fv3gfs_dwn_nems.sh
+ush/fv3gfs_filter_topo.sh
+ush/fv3gfs_make_grid.sh
+ush/fv3gfs_make_orog.sh
+ush/getncdimlen
+ush/gfs_nceppost.sh
+ush/gfs_transfer.sh
+ush/gldas_archive.sh
+ush/gldas_forcing.sh
+ush/gldas_get_data.sh
+ush/gldas_liscrd.sh
+ush/gldas_post.sh
+ush/gldas_process_data.sh
+ush/global_chgres.sh
+ush/global_chgres_driver.sh
+ush/global_cycle.sh
+ush/global_cycle_driver.sh
+ush/gsi_utils.py
+ush/link_crtm_fix.sh
+ush/minmon_xtrct_costs.pl
+ush/minmon_xtrct_gnorms.pl
+ush/minmon_xtrct_reduct.pl
+ush/mkwfsgbl.sh
+ush/mod_icec.sh
+ush/ozn_xtrct.sh
+ush/radmon_ck_stdout.sh
+ush/radmon_err_rpt.sh
+ush/radmon_verf_angle.sh
+ush/radmon_verf_bcoef.sh
+ush/radmon_verf_bcor.sh
+ush/radmon_verf_time.sh
+ush/trim_rh.sh
+ush/wafs_blending.sh
+ush/wafs_grib2.regrid.sh
+ush/wafs_intdsk.sh
+# util symlinks
+util/sub_slurm
+util/sub_wcoss_c
+util/sub_wcoss_d
