Revert "Temporarily disable building ww3_prepost."
This reverts commit a55fd0a3d12fdf23b826dfa063565fe0659b58c9.

--- a/sorc/cpl_build.cfg
+++ b/sorc/cpl_build.cfg
@@ -2,7 +2,7 @@
 # ***** configuration of coupled workflow build *****
 
  Building fv3gfs (fv3gfs) .............................. yes
- Building ww3_prepost (ww3_prepost) .................... no
+ Building ww3_prepost (ww3_prepost) .................... yes
  Building gsi (gsi) .................................... no
  Building gldas (gldas) ................................ no
  Building ncep_post (ncep_post) ........................ yes
