--- a/workflow/config/fcst.yaml
+++ b/workflow/config/fcst.yaml
@@ -101,7 +101,7 @@ config_fcst:
     export OCNPETS="{doc.ocn_settings.OCNPETS}"
     export ICEPETS="{doc.ice_settings.ICEPETS}"
     export WAVPETS="{doc.wave_settings.WAVPETS}"
-    export CHMPETS="{resource_a[0].mpi_ranks}"
+    export CHMPETS="{doc.fv3_gfs_settings.ATMPETS-doc.fv3_gfs_settings.layout.WGRP*doc.fv3_gfs_settings.layout.WGRP_NTASKS}"
     #
     #######################################################################    
     # CICE parameters
