Move GOCART diagnostic files to COMROT directory if available.
Diagnostic files are named as $EXPID.*.nc4, where EXPID is set
in the History configuration file. A corresponding EXPID keyword
is added to chem_settings and can be set in the case yaml file
for further customization.

--- a/workflow/config/fcst.yaml
+++ b/workflow/config/fcst.yaml
@@ -249,6 +249,7 @@ config_fcst:
         export FIELD_TABLE="$HOMEgfs/parm/parm_fv3diag/field_table_aer"
         export CHM_CFGDIR="{doc.chem_settings.CFGDIR}"
         export CHM_INPDIR="{doc.chem_settings.INPDIR}"
+        export CHM_EXPID="{doc.chem_settings.EXPID}"
         export dnats="$(( $dnats + {doc.chem_settings.ntdiag} ))"
         export KMP_INIT_AT_FORK=FALSE # Temporary setting
     elif [[ $cpl == .true. ]] ; then # coupled model
