--- a/workflow/defaults/chem.yaml
+++ b/workflow/defaults/chem.yaml
@@ -2,6 +2,7 @@
 
 chem_defaults: &chem_defaults
   MOD: gocart
+  EXPID: gocart
   ntdiag: 0
   CFGDIR: !FirstTrue
     - when: !calc (doc.settings.cplchem != ".true.")
