--- a/workflow/cases/aerosol_firex_forecast.yaml
+++ b/workflow/cases/aerosol_firex_forecast.yaml
@@ -48,7 +48,7 @@ case:
        WGRP_NTASKS: 24
        WRTIOBUF: "32M"
     CPL_ATMIC: FV3ICS
-    CCPP_SUITE: FV3_GFS_v16
+    CCPP_SUITE: FV3_GFS_v16_ugwpv1
     fscav_aero: [ '*:0.6', 'seas1:1.0', 'seas2:1.0', 'seas3:1.0', 'seas4:1.0', 'seas5:1.0' ]
 
   chem_settings:
