--- a/sorc/CMakeLists.txt
+++ b/sorc/CMakeLists.txt
@@ -51,10 +51,11 @@ find_package(sp REQUIRED)
 find_package(ip REQUIRED)
 find_package(ncio REQUIRED)
 find_package(nemsio REQUIRED)
-find_package(nemsiogfs REQUIRED)
 find_package(sigio REQUIRED)
 find_package(g2 REQUIRED)
 find_package(bufr REQUIRED)
+find_package(landsfcutil REQUIRED)
+find_package(wgrib2 REQUIRED)
 
 add_subdirectory(enkf_chgres_recenter.fd)
 add_subdirectory(enkf_chgres_recenter_nc.fd)
@@ -62,6 +63,7 @@ add_subdirectory(fv3nc2nemsio.fd)
 add_subdirectory(regrid_nemsio.fd)
 add_subdirectory(gaussian_sfcanl.fd)
 add_subdirectory(gfs_bufr.fd)
+add_subdirectory(reg2grb2.fd)
 add_subdirectory(tocsbufr.fd)
 add_subdirectory(fbwndgfs.fd)
 add_subdirectory(vint.fd)
