--- a/sorc/fv3gfs_build.cfg
+++ b/sorc/fv3gfs_build.cfg
@@ -1,7 +1,7 @@
 #
 # ***** configuration of global-workflow build *****
 
- Building fv3gfs (fv3gfs) .............................. yes
+ Building ufs_model (ufs_model) ........................ yes
  Building ww3_prepost (ww3_prepost) .................... yes
  Building gsi (gsi) .................................... yes
  Building gldas (gldas) ................................ yes
