Update to MERRA2 aerosol climatology
Adds the capability to use MERRA2 aerosol climatology and makes it
the default.

An addition to the diag table is required. Rather than continue the
proliferation of diag tables to produce one specifically for coupled
and MERRA2, the existing diag table from the MERRA2 update in devleop
is pared down to just the additional fields introduced. This is then
appended to the main diag table if necessary.

Also corrected a related issue in the CROW forecast config. While
IAER and several other similar settings were already present in the
schema, the values were hard-coded in the forecast config instead of
using the value set. The script now correctly uses the values set by
the configuration system. The default for IAER is changed to 1011 for
MERRA2.

Refs: #379

--- a/workflow/config/fcst.yaml
+++ b/workflow/config/fcst.yaml
@@ -146,11 +146,11 @@ config_fcst:
     export n_split={doc.fv3_gfs_settings.n_split}
     export adjust_dry_mass=".false."
 
-    export IALB=1
-    export IEMS=1
-    export ISOL=2
-    export IAER=5111
-    export ICO2=2
+    export IALB={doc.fv3_gfs_settings.IALB}
+    export IEMS={doc.fv3_gfs_settings.IEMS}
+    export ISOL={doc.fv3_gfs_settings.ISOL}
+    export IAER={doc.fv3_gfs_settings.IAER}
+    export ICO2={doc.fv3_gfs_settings.ICO2}
 
     export icliq_sw=2
     export iovr=3
