--- a/ush/nems.configure.cpld.IN
+++ b/ush/nems.configure.cpld.IN
@@ -31,6 +31,7 @@ OCN_attributes::
   DumpFields = @[DumpFields]
   ProfileMemory = false
   OverwriteSlice = true
+  mesh_ocn = @[MESH_OCN_ICE]
 ::
 
 # ICE #
@@ -41,7 +42,7 @@ ICE_attributes::
   DumpFields = @[DumpFields]
   ProfileMemory = false
   OverwriteSlice = true
-  mesh_ice = @[MESHICE]
+  mesh_ice = @[MESH_OCN_ICE]
   stop_n = @[RESTART_N]
   stop_option = nhours
   stop_ymd = -999
@@ -99,4 +100,6 @@ ALLCOMP_attributes::
       restart_ymd = -999
       dbug_flag = @[cap_dbug_flag]
       use_coldstart = @[use_coldstart]
+      use_mommesh = @[use_mommesh]
+      eps_imesh = @[eps_imesh]
 ::
