--- a/workflow/platforms/orion.yaml
+++ b/workflow/platforms/orion.yaml
@@ -37,7 +37,7 @@ platform: !Platform
 
 
   #BASE_CPLIC - is the base directory of ICs for coupled s2s runs
-  BASE_CPLIC: "/work/noaa/marine/Partha.Bhattacharjee/IC_Dir"
+  BASE_CPLIC: "/work/noaa/global/wkolczyn/noscrub/global-workflow/IC"
   #ncks - NCO netcdf operator used in ocean post 
   ncks: "/apps/intel-2020/nco-4.8.1/bin/ncks"
 
