--- a/workflow/defaults/fv3_enkf.yaml
+++ b/workflow/defaults/fv3_enkf.yaml
@@ -20,6 +20,7 @@ fv3_enkf_defaults: &fv3_enkf_defaults
   MEMBER: -1
   d4_bg: 0.15
   dddmp: 0.1
+  lheatstrg: true
   ISEED: 0
   SET_STP_SEED: YES
 
