--- a/workflow/defaults/fv3_gfs.yaml
+++ b/workflow/defaults/fv3_gfs.yaml
@@ -17,6 +17,7 @@ fv3_gfs_defaults: &fv3_gfs_defaults
   MEMBER: -1
   d4_bg: 0.15
   dddmp: 0.1
+  lheatstrg: true
   min_lakeice: 0.15
   min_seaice: 0.15 
   ISEED: 0
