--- a/workflow/defaults/fv3_enkf.yaml
+++ b/workflow/defaults/fv3_enkf.yaml
@@ -19,7 +19,8 @@ fv3_enkf_defaults: &fv3_enkf_defaults
   MONO: "non-mono"
   MEMBER: -1
   d4_bg: 0.15
-  dddmp: 0.2
+  dddmp: 0.1
+  lheatstrg: true
   ISEED: 0
   SET_STP_SEED: YES
 
@@ -113,8 +114,8 @@ fv3_enkf_defaults: &fv3_enkf_defaults
   dspheat: YES
   shal_cnv: NO
   agrid_vel_rst: yes
-  IEMS: 1
-  IALB: 1
+  IEMS: 2
+  IALB: 2
   ISOL: 2
   IAER: 1011
   ICO2: 2
