--- a/workflow/defaults/fv3_gdas.yaml
+++ b/workflow/defaults/fv3_gdas.yaml
@@ -15,7 +15,8 @@ fv3_gdas_defaults: &fv3_gdas_defaults
   MONO: "non-mono"
   MEMBER: -1
   d4_bg: 0.15
-  dddmp: 0.2
+  dddmp: 0.1
+  lheatstrg: true
   min_lakeice: 0.15
   min_seaice: 0.15
   ISEED: 0
@@ -86,8 +87,8 @@ fv3_gdas_defaults: &fv3_gdas_defaults
   dspheat: YES
   shal_cnv: YES
   agrid_vel_rst: yes
-  IEMS: 1
-  IALB: 1
+  IEMS: 2
+  IALB: 2
   ISOL: 2
   IAER: 1011
   ICO2: 2
