Fix launcher in JET.env and SENDCOM in config.post for fcst and post jobs to complete

--- a/env/JET.env
+++ b/env/JET.env
@@ -133,11 +133,11 @@ elif [ $step = "post" ]; then
 
     export NTHREADS_NP=${nth_np:-1}
     [[ $NTHREADS_NP -gt $nth_max ]] && export NTHREADS_NP=$nth_max
-    export APRUN_NP="$launcher ${npe_np:-${npe_post:-$PBS_NP}}"
+    export APRUN_NP="$launcher"
 
     export NTHREADS_DWN=${nth_dwn:-1}
     [[ $NTHREADS_DWN -gt $nth_max ]] && export NTHREADS_DWN=$nth_max
-    export APRUN_DWN="$launcher ${npe_dwn:-$PBS_NP}"
+    export APRUN_NP="$launcher"
 
 elif [ $step = "ecen" ]; then
 
