--- a/env/JET.env
+++ b/env/JET.env
@@ -13,19 +13,20 @@ fi
 
 step=$1
 
-# Theia information
-export npe_node_max=24
-export launcher="mpirun -np"
+if [[ "$PARTITION_BATCH" = "xjet" ]]; then
+  export npe_node_max=24
+elif [[ "$PARTITION_BATCH" = "vjet" ]]; then
+  export npe_node_max=16
+fi
+export launcher="srun --export=ALL"
 
-# Configure MPI environment
-export MPI_BUFS_PER_PROC=2048
-export MPI_BUFS_PER_HOST=2048
-export MPI_GROUP_MAX=256
-export MPI_MEMMAP_OFF=1
-export MP_STDOUTMODE="ORDERED"
+# Configure STACK
 export OMP_STACKSIZE=2048000
 export NTHSTACK=1024000000
-#export LD_BIND_NOW=1
+
+ulimit -s unlimited
+ulimit -a
+
 export job=${PBS_JOBNAME:-$step}
 export jobid=${job}.${PBS_JOBID:-$$}
 
@@ -34,8 +35,8 @@ if [ $step = "prep" -o $step = "prepbufr" ]; then
     nth_max=$(($npe_node_max / $npe_node_prep))
 
     export POE="NO"
-    export BACK=${BACK:-"YES"}
-    export sys_tp="Cray-CS400"
+    export BACK=${BACK:-"NO"}
+    export sys_tp="JET"
 
 elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $step = "wavepostbndpnt" -o $step = "wavepostbndpntbll" -o $step = "wavepostpnt" ]; then
 
@@ -103,12 +104,8 @@ elif [ $step = "fcst" ]; then
     export NTHREADS_FV3=${nth_fv3:-$nth_max}
     [[ $NTHREADS_FV3 -gt $nth_max ]] && export NTHREADS_FV3=$nth_max
     export cores_per_node=$npe_node_max
-    #export APRUN_FV3="$launcher ${npe_fv3:-${npe_fcst:-$PBS_NP}}"
-    if [ $CDUMP = "gdas" ]; then
-      export APRUN_FV3="$launcher ${npe_fcst:-$PBS_NP}"
-    else
-      export APRUN_FV3="$launcher ${npe_fcst_gfs:-$PBS_NP}"
-    fi
+    export APRUN_FV3="$launcher"
+
     export NTHREADS_REGRID_NEMSIO=${nth_regrid_nemsio:-1}
     [[ $NTHREADS_REGRID_NEMSIO -gt $nth_max ]] && export NTHREADS_REGRID_NEMSIO=$nth_max
     export APRUN_REGRID_NEMSIO="$launcher $LEVS"
@@ -136,11 +133,11 @@ elif [ $step = "post" ]; then
 
     export NTHREADS_NP=${nth_np:-1}
     [[ $NTHREADS_NP -gt $nth_max ]] && export NTHREADS_NP=$nth_max
-    export APRUN_NP="$launcher ${npe_np:-${npe_post:-$PBS_NP}}"
+    export APRUN_NP="$launcher"
 
     export NTHREADS_DWN=${nth_dwn:-1}
     [[ $NTHREADS_DWN -gt $nth_max ]] && export NTHREADS_DWN=$nth_max
-    export APRUN_DWN="$launcher ${npe_dwn:-$PBS_NP}"
+    export APRUN_NP="$launcher"
 
 elif [ $step = "ecen" ]; then
 
