--- a/env/ORION.env
+++ b/env/ORION.env
@@ -148,7 +148,7 @@ elif [ $step = "efcs" ]; then
     export NTHREADS_FV3=${nth_efcs:-$nth_max}
     [[ $NTHREADS_FV3 -gt $nth_max ]] && export NTHREADS_FV3=$nth_max
     export cores_per_node=$npe_node_max
-    export APRUN_FV3="$launcher"
+    export APRUN_FV3="$launcher -n $ntasks_efcs"
 
     export NTHREADS_REGRID_NEMSIO=${nth_regrid_nemsio:-1}
     [[ $NTHREADS_REGRID_NEMSIO -gt $nth_max ]] && export NTHREADS_REGRID_NEMSIO=$nth_max
