more namelist changes that were needed to run with latest code

--- a/workflow/cases/coupled_free_forecast_wave.yaml
+++ b/workflow/cases/coupled_free_forecast_wave.yaml
@@ -43,7 +43,7 @@ case:
     min_lakeice: 0.15
     min_seaice: 1.0e-11
     SEEDLET: 10
-    CCPP_SUITE: FV3_GFS_v16_coupled_nsstNoahmpUGWPv1
+    CCPP_SUITE: 'FV3_GFS_v16_coupled_nsstNoahmpUGWPv1'
     CPL_ATMIC: GEFSwithNOAHMP
     nst_anl: yes
     psm_bc: 1
