--- a/workflow/cases/prototype7.1.yaml
+++ b/workflow/cases/prototype7.1.yaml
@@ -40,11 +40,11 @@ case:
   fv3_gfs_settings:
     CASE: C384
     LEVS: 128
-    DELTIM: 225
+    DELTIM: 300
     min_lakeice: 0.15
     min_seaice: 1.0e-11
     SEEDLET: 10
-    CCPP_SUITE: FV3_GFS_v16_coupled_nsstNoahmpUGWPv1
+    CCPP_SUITE: 'FV3_GFS_v16_coupled_nsstNoahmpUGWPv1'
     CPL_ATMIC: GEFSwithNOAHMP
     nst_anl: yes
     psm_bc: 1
