--- a/ush/nems.configure.atm_aer.IN
+++ b/ush/nems.configure.atm_aer.IN
@@ -32,3 +32,13 @@ runSeq::
     ATM phase2
   @
 ::
+
+# CMEPS variables
+
+DRIVER_attributes::
+  mediator_read_restart = .false.
+::
+
+ALLCOMP_attributes::
+  start_type = startup
+::
