Update aerosol scavenging coefficients in P7.1 case file.

--- a/workflow/cases/prototype7.1.yaml
+++ b/workflow/cases/prototype7.1.yaml
@@ -55,7 +55,7 @@ case:
     DO_SPPT: false
     k_split: 2
     n_split: 6
-    fscav_aero: [ '*:0.6', 'seas1:1.0', 'seas2:1.0', 'seas3:1.0', 'seas4:1.0', 'seas5:1.0' ]
+    fscav_aero: [ '*:0.2', 'so4:0.3','dust1:0.7', 'dust2:0.7', 'dust3:0.7', 'dust4:0.7', 'dust5:0.7','seas1:0.6', 'seas2:0.6', 'seas3:0.6', 'seas4:0.6', 'seas5:0.6' ]
     layout:
        x: 12
        y: 16
@@ -67,8 +67,8 @@ case:
   chem_settings:
     MOD: gocart
     ntdiag: 2
-    CFGDIR: /scratch1/NCEPDEV/nems/Raffaele.Montuoro/data/NASA/p7.1/rc
-    INPDIR: /scratch1/NCEPDEV/nems/Raffaele.Montuoro/data/NASA/ExtData
+    CFGDIR: /scratch1/NCEPDEV/nems/Raffaele.Montuoro/data/NASA/p7.1/rc # please replace with proper rc file set - see: https://github.com/noaa-oar-arl/UFS-Aerosol-Config
+    INPDIR: /scratch1/NCEPDEV/nems/Raffaele.Montuoro/data/NASA/ExtData # must be consistent with rc file set above
 
   ocn_settings:
     OCNPETS: 220
