Update repository name for EMC_post component to UPP in operations branch
- the "EMC_post" repository was renamed to "UPP" on September 6th 2021
- update repository url in checkout script and Externals.cfg

Refs: #433

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -21,10 +21,10 @@ repo_url = https://github.com/NOAA-EMC/GLDAS.git
 protocol = git
 required = True
 
-[EMC_post]
+[UPP]
 tag = upp_gfsv16_release.v1.1.4
 local_path = sorc/gfs_post.fd
-repo_url = https://github.com/NOAA-EMC/EMC_post.git
+repo_url = https://github.com/NOAA-EMC/UPP.git
 protocol = git
 required = True
 
