Initial port to Jet.  (#357)

--- a/env/JET.env
+++ b/env/JET.env
@@ -20,7 +20,7 @@ elif [[ "$PARTITION_BATCH" = "vjet" ]]; then
 fi
 export launcher="srun -l --export=ALL"
 
-# Configure STACK
+# Configure MPI environment
 export OMP_STACKSIZE=2048000
 export NTHSTACK=1024000000
 
@@ -35,35 +35,44 @@ if [ $step = "prep" -o $step = "prepbufr" ]; then
     nth_max=$(($npe_node_max / $npe_node_prep))
 
     export POE="NO"
-    export BACK=${BACK:-"NO"}
+    export BACK="NO"
     export sys_tp="JET"
 
 elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $step = "wavepostbndpnt" -o $step = "wavepostbndpntbll" -o $step = "wavepostpnt" ]; then
-
+#TODO Test multi-prog option
+    export mpmd="--multi-prog"
+    export CFP_MP="YES"
     if [ $step = "waveprep" ]; then export MP_PULSE=0 ; fi
     export wavempexec=${launcher}
     export wave_mpmd=${mpmd}
 
 elif [ $step = "anal" ]; then
 
+    export MKL_NUM_THREADS=4
+    export MKL_CBWR=AUTO
+
+    export CFP_MP=${CFP_MP:-"YES"}
+    export USE_CFP=${USE_CFP:-"YES"}
+    export APRUNCFP="$launcher -n \$ncmd --multi-prog"
+
     nth_max=$(($npe_node_max / $npe_node_anal))
 
-    export NTHREADS_GSI=${nth_gsi:-$nth_max}
+    export NTHREADS_GSI=${nth_anal:-$nth_max}
     [[ $NTHREADS_GSI -gt $nth_max ]] && export NTHREADS_GSI=$nth_max
-    export APRUN_GSI="$launcher ${npe_gsi:-${npe_anal:-$PBS_NP}}"
+    export APRUN_GSI="$launcher"
 
     export NTHREADS_CALCINC=${nth_calcinc:-1}
     [[ $NTHREADS_CALCINC -gt $nth_max ]] && export NTHREADS_CALCINC=$nth_max
-    export APRUN_CALCINC="$launcher \$ncmd"
+    export APRUN_CALCINC="$launcher"
 
     export NTHREADS_CYCLE=${nth_cycle:-12}
     [[ $NTHREADS_CYCLE -gt $npe_node_max ]] && export NTHREADS_CYCLE=$npe_node_max
     npe_cycle=${ntiles:-6}
-    export APRUN_CYCLE="$launcher $npe_cycle"
+    export APRUN_CYCLE="$launcher -n $npe_cycle"
 
     export NTHREADS_GAUSFCANL=1
     npe_gausfcanl=${npe_gausfcanl:-1}
-    export APRUN_GAUSFCANL="$launcher $npe_gausfcanl"
+    export APRUN_GAUSFCANL="$launcher -n $npe_gausfcanl"
 
     export NTHREADS_CHGRES=${nth_echgres:-1}
     [[ $NTHREADS_CHGRES -gt $npe_node_max ]] && export NTHREADS_CHGRES=$npe_node_max
@@ -75,27 +84,44 @@ elif [ $step = "gldas" ]; then
 
     export NTHREADS_GLDAS=${nth_gldas:-$nth_max}
     [[ $NTHREADS_GLDAS -gt $nth_max ]] && export NTHREADS_GLDAS=$nth_max
-    export APRUN_GLDAS="$launcher $npe_gldas"
+    export APRUN_GLDAS="$launcher -n $npe_gldas"
 
     export NTHREADS_GAUSSIAN=${nth_gaussian:-1}
     [[ $NTHREADS_GAUSSIAN -gt $nth_max ]] && export NTHREADS_GAUSSIAN=$nth_max
-    export APRUN_GAUSSIAN="$launcher $npe_gaussian"
+    export APRUN_GAUSSIAN="$launcher -n $npe_gaussian"
+
+# Must run data processing with exactly the number of tasks as time
+# periods being processed.
+
+    npe_gldas_data_proc=$(($gldas_spinup_hours + 12))
+    export APRUN_GLDAS_DATA_PROC="$launcher -n $npe_gldas_data_proc --multi-prog"
 
 elif [ $step = "eobs" ]; then
 
+    export MKL_NUM_THREADS=4
+    export MKL_CBWR=AUTO
+
     nth_max=$(($npe_node_max / $npe_node_eobs))
 
-    export NTHREADS_GSI=${nth_gsi:-$nth_max}
+    export NTHREADS_GSI=${nth_eobs:-$nth_max}
     [[ $NTHREADS_GSI -gt $nth_max ]] && export NTHREADS_GSI=$nth_max
-    export APRUN_GSI="$launcher ${npe_gsi:-${npe_eobs:-$PBS_NP}}"
+    export APRUN_GSI="$launcher"
+
+    export CFP_MP=${CFP_MP:-"YES"}
+    export USE_CFP=${USE_CFP:-"YES"}
+    export APRUNCFP="$launcher -n \$ncmd --multi-prog"
 
 elif [ $step = "eupd" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_eupd))
 
-    export NTHREADS_ENKF=${nth_enkf:-$nth_max}
+    export NTHREADS_ENKF=${nth_eupd:-$nth_max}
     [[ $NTHREADS_ENKF -gt $nth_max ]] && export NTHREADS_ENKF=$nth_max
-    export APRUN_ENKF="$launcher ${npe_enkf:-${npe_eupd:-$PBS_NP}}"
+    export APRUN_ENKF="$launcher"
+
+    export CFP_MP=${CFP_MP:-"YES"}
+    export USE_CFP=${USE_CFP:-"YES"}
+    export APRUNCFP="$launcher -n \$ncmd --multi-prog"
 
 elif [ $step = "fcst" ]; then
 
@@ -108,20 +134,20 @@ elif [ $step = "fcst" ]; then
 
     export NTHREADS_REGRID_NEMSIO=${nth_regrid_nemsio:-1}
     [[ $NTHREADS_REGRID_NEMSIO -gt $nth_max ]] && export NTHREADS_REGRID_NEMSIO=$nth_max
-    export APRUN_REGRID_NEMSIO="$launcher $LEVS"
+    export APRUN_REGRID_NEMSIO="$launcher"
 
     export NTHREADS_REMAP=${nth_remap:-2}
     [[ $NTHREADS_REMAP -gt $nth_max ]] && export NTHREADS_REMAP=$nth_max
-    export APRUN_REMAP="$launcher ${npe_remap:-${npe_fcst:-$PBS_NP}}"
+    export APRUN_REMAP="$launcher"
 
 elif [ $step = "efcs" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_efcs))
 
-    export NTHREADS_FV3=${nth_fv3:-$nth_max}
+    export NTHREADS_FV3=${nth_efcs:-$nth_max}
     [[ $NTHREADS_FV3 -gt $nth_max ]] && export NTHREADS_FV3=$nth_max
     export cores_per_node=$npe_node_max
-    export APRUN_FV3="$launcher ${npe_fv3:-${npe_efcs:-$PBS_NP}}"
+    export APRUN_FV3="$launcher"
 
     export NTHREADS_REGRID_NEMSIO=${nth_regrid_nemsio:-1}
     [[ $NTHREADS_REGRID_NEMSIO -gt $nth_max ]] && export NTHREADS_REGRID_NEMSIO=$nth_max
@@ -137,7 +163,7 @@ elif [ $step = "post" ]; then
 
     export NTHREADS_DWN=${nth_dwn:-1}
     [[ $NTHREADS_DWN -gt $nth_max ]] && export NTHREADS_DWN=$nth_max
-    export APRUN_NP="$launcher"
+    export APRUN_DWN="$launcher"
 
 elif [ $step = "ecen" ]; then
 
@@ -145,7 +171,7 @@ elif [ $step = "ecen" ]; then
 
     export NTHREADS_ECEN=${nth_ecen:-$nth_max}
     [[ $NTHREADS_ECEN -gt $nth_max ]] && export NTHREADS_ECEN=$nth_max
-    export APRUN_ECEN="$launcher ${npe_ecen:-$PBS_NP}"
+    export APRUN_ECEN="$launcher"
 
     export NTHREADS_CHGRES=${nth_chgres:-12}
     [[ $NTHREADS_CHGRES -gt $npe_node_max ]] && export NTHREADS_CHGRES=$npe_node_max
@@ -153,7 +179,7 @@ elif [ $step = "ecen" ]; then
 
     export NTHREADS_CALCINC=${nth_calcinc:-1}
     [[ $NTHREADS_CALCINC -gt $nth_max ]] && export NTHREADS_CALCINC=$nth_max
-    export APRUN_CALCINC="$launcher ${npe_ecen:-$PBS_NP}"
+    export APRUN_CALCINC="$launcher"
 
 elif [ $step = "esfc" ]; then
 
@@ -161,12 +187,11 @@ elif [ $step = "esfc" ]; then
 
     export NTHREADS_ESFC=${nth_esfc:-$nth_max}
     [[ $NTHREADS_ESFC -gt $nth_max ]] && export NTHREADS_ESFC=$nth_max
-    export APRUN_ESFC="$launcher ${npe_esfc:-$PBS_NP}"
+    export APRUN_ESFC="$launcher -n $npe_esfc"
 
-    export NTHREADS_CYCLE=${nth_cycle:-12}
+    export NTHREADS_CYCLE=${nth_cycle:-14}
     [[ $NTHREADS_CYCLE -gt $npe_node_max ]] && export NTHREADS_CYCLE=$npe_node_max
-    export APRUN_CYCLE="$launcher $npe_esfc"
-
+    export APRUN_CYCLE="$launcher -n $npe_esfc"
 
 elif [ $step = "epos" ]; then
 
@@ -174,7 +199,7 @@ elif [ $step = "epos" ]; then
 
     export NTHREADS_EPOS=${nth_epos:-$nth_max}
     [[ $NTHREADS_EPOS -gt $nth_max ]] && export NTHREADS_EPOS=$nth_max
-    export APRUN_EPOS="$launcher ${npe_epos:-$PBS_NP}"
+    export APRUN_EPOS="$launcher"
 
 elif [ $step = "init" ]; then
 
@@ -186,11 +211,11 @@ elif [ $step = "postsnd" ]; then
 
     export NTHREADS_POSTSND=${nth_postsnd:-1}
     [[ $NTHREADS_POSTSND -gt $nth_max ]] && export NTHREADS_POSTSND=$nth_max
-    export APRUN_POSTSND="$launcher $npe_postsnd"
+    export APRUN_POSTSND="$launcher"
 
     export NTHREADS_POSTSNDCFP=${nth_postsndcfp:-1}
     [[ $NTHREADS_POSTSNDCFP -gt $nth_max ]] && export NTHREADS_POSTSNDCFP=$nth_max
-    export APRUN_POSTSNDCFP="$launcher $npe_postsndcfp"
+    export APRUN_POSTSNDCFP="$launcher"
 
 elif [ $step = "awips" ]; then
 
@@ -199,5 +224,4 @@ elif [ $step = "awips" ]; then
 elif [ $step = "gempak" ]; then
 
      echo "WARNING: $step is not enabled on $machine!"
-
 fi
