Adjust gaussian_sfcanl Makefile CMD copy
- add CMD to end of exec copy to resolve copy error on WCOSS2

Refs: #399

--- a/sorc/gaussian_sfcanl.fd/Makefile
+++ b/sorc/gaussian_sfcanl.fd/Makefile
@@ -13,7 +13,7 @@ gaussian_sfcanl.o:  gaussian_sfcanl.f90
 	$(FCOMP) $(FFLAGS) -I$(NEMSIO_INC) $(NETCDF_INCLUDE) -c gaussian_sfcanl.f90
 
 install:
-	cp ${CMD} ../../exec
+	cp ${CMD} ../../exec/${CMD}
 
 clean:
 	rm -f *.o *.mod ${CMD} ../../exec/${CMD}
