--- a/util/sorc/rdbfmsua.fd/makefile.wcoss2
+++ b/util/sorc/rdbfmsua.fd/makefile.wcoss2
@@ -47,9 +47,10 @@ FFLAGS =	-I${GEMINC} -I${OS_INC}
 
 # BRIDGE=/gpfs/dell1/nco/ops/nwpara/gempak.v7.3.1/nawips/os/linux3.10.0_x86_64/lib/libbridge.a
 BRIDGE=${GEMOLB}/libbridge.a
+GFORTRAN=/opt/cray/pe/gcc/10.3.0/snos/lib64/libgfortran.a
 
 LIBS =    ${DECOD_UT_LIB} ${BUFR_LIB4} \
-	-L${GEMOLB} -lgemlib -lappl -lsyslib -lcgemlib -lgfortran ${BRIDGE}
+        -L${GEMOLB} -lgemlib -lappl -lsyslib -lcgemlib ${GFORTRAN} ${BRIDGE}
 
 #	-L${GEMOLB} -lgemlib -lappl -lsyslib -lcgemlib -lgfortran ${BRIDGE}
 #          -L/nwprod/gempak/nawips1/os/linux2.6.32_x86_64/lib -lgemlib -lappl -lsyslib -lcgemlib -lbridge -lncepBUFR \
