Updated S4.env to match recent changes. (#138)

--- a/env/S4.env
+++ b/env/S4.env
@@ -212,9 +212,7 @@ elif [ $step = "epos" ]; then
 
 elif [ $step = "init" ]; then
 
-    export NTHREADS_CHGRES=${nth_chgres:-$npe_node_max}
-    [[ $NTHREADS_CHGRES -gt $npe_node_max ]] && export NTHREADS_CHGRES=$npe_node_max
-    export APRUN_CHGRES="time"
+    export APRUN="$launcher"
 
 elif [ $step = "postsnd" ]; then
 
