Update WCOSS2 env file to use PBS variables
- update job variable to use PBS_JOBNAME
- update jobid variable to use PBS_JOBID

Refs: #399

--- a/env/WCOSS2.env
+++ b/env/WCOSS2.env
@@ -24,8 +24,8 @@ export MPI_LABELIO=YES
 export MP_STDOUTMODE="ORDERED"
 export KMP_STACKSIZE=2048M
 export KMP_AFFINITY=scatter
-export job=${LSB_JOBNAME:-$step}
-export jobid=${job}.${LSB_JOBID:-$$}
+export job=${PBS_JOBNAME:-$step}
+export jobid=${job}.${PBS_JOBID:-$$}
 
 if [ $step = "prep" -o $step = "prepbufr" ]; then
 
