Change NETCDF4 to NETCDF,remove "-lhdf5_hl -lhdf5"
Due to the new NetCDF lib
1) Change NETCDF4 to NETCDF
2) Remove "-lhdf5_hl -lhdf5"
Update gfsfix path to Kate's path

 On branch feature/gefs_v12_github_port2acorn
 Changes to be committed:
	modified:   enkf_chgres_recenter_nc.fd/CMakeLists.txt
	modified:   enkf_chgres_recenter_nc.fd/src/makefile
	modified:   link_fv3gfs.sh

Refs: #345

--- a/sorc/enkf_chgres_recenter_nc.fd/CMakeLists.txt
+++ b/sorc/enkf_chgres_recenter_nc.fd/CMakeLists.txt
@@ -111,7 +111,7 @@ project(CHGRES)
   include_directories(${MPI_Fortran_INCLUDE_DIRS} ${MPI_INCLUDE_PATH} "./" ${CMAKE_INCLUDE_OUTPUT_DIRECTORY})
   link_directories(${MPI_Fortran_LIBRARIES} ${ARCHIVE_OUTPUT_PATH} )
     find_package( NetCDF REQUIRED)
-    if(NETCDF4)
+    if(NETCDF)
       if(CMAKE_MAJOR_VERSION GREATER 2)
         find_package( ZLIB )
       endif()
