Updated Externals.cfg for Jet port.

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -8,22 +8,22 @@ protocol = git
 required = True
 
 [GSI]
-hash = 9c1fc15d42573b398037319bbf8d5143ad126fb6
+tag = port_9c1fc15_2_jet
 local_path = sorc/gsi.fd
-repo_url = https://github.com/NOAA-EMC/GSI.git
+repo_url = https://github.com/DavidHuber-NOAA/GSI.git
 protocol = git
 required = True
 
 [GLDAS]
-tag = gldas_gfsv16_release.v1.15.0
+tag = port_v1.15.0_2_jet
 local_path = sorc/gldas.fd
-repo_url = https://github.com/NOAA-EMC/GLDAS.git
+repo_url = https://github.com/DavidHuber-NOAA/GLDAS.git
 protocol = git
 required = True
 
 [UPP]
 #No externals setting = .gitmodules will be invoked for CMakeModules and comupp/src/lib/crtm2 submodules
-hash = ff42e0227d6100285d4179a2572b700fd5a959cb
+tag = port_ff42e022_2_jet
 local_path = sorc/gfs_post.fd
 repo_url = https://github.com/NOAA-EMC/UPP.git
 protocol = git
