--- a/env/JET.env
+++ b/env/JET.env
@@ -15,8 +15,10 @@ step=$1
 
 if [[ "$PARTITION_BATCH" = "xjet" ]]; then
   export npe_node_max=24
-elif [[ "$PARTITION_BATCH" = "vjet" ]]; then
+elif [[ "$PARTITION_BATCH" = "vjet" || "$PARTITION_BATCH" = "sjet" ]]; then
   export npe_node_max=16
+elif [[ "$PARTITION_BATCH" = "kjet" ]]; then
+  export npe_node_max=40
 fi
 export launcher="srun -l --export=ALL"
 
