Set verbosity level to 0 for chemistry component.

--- a/ush/nems.configure.cpld_wave_aer.IN
+++ b/ush/nems.configure.cpld_wave_aer.IN
@@ -27,7 +27,7 @@ ATM_attributes::
 CHM_model:                      @[chm_model]
 CHM_petlist_bounds:             @[chm_petlist_bounds]
 CHM_attributes::
-  Verbosity = max
+  Verbosity = 0
 ::
 
 # OCN #
